proyecto coder aplicando bootstrap

--- a/DulcesMary Zamora/css/estilos.css
+++ b/DulcesMary Zamora/css/estilos.css
@@ -199,12 +199,13 @@ section {
 
 }
 
-.foto{
+.card{
     width: 300px;
     padding: 1rem;
     background-color:white;
     margin-top: 20px;
     border-radius: 15px;
+    text-align: center;
 }
 
 .foto img {
